the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-server-dep
  namespace: project
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-server
  template:
    metadata:
      labels:
        app: todo-server
    spec:
      # add permission to read the files
      securityContext:
        runAsUser: 1000 # bun user UID (common in oven/bun image)
        runAsGroup: 1000 # bun group GID
        fsGroup: 1000 # ensure mounted volume gets group ownership
        fsGroupChangePolicy: OnRootMismatch

      volumes:
        - name: project-storage
          persistentVolumeClaim:
            claimName: project-claim

      containers:
        - name: todo-server
          image: gcr.io/PROJECT_ID/todo-server
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 5000

          volumeMounts:
            - name: project-storage
              mountPath: /usr/src/app/public
